# spaday

./: .buildinfo  .copier-answers.yaml  .gitignore  Cargo.toml  Makefile  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml  docs.yaml
_modules/: index.html
_modules/spaday/: actions.html  bootstrap.html  cem.html  component.html  packages.html  render.html  validate.html
_sources/: index.md.txt
docs/src/: api.html  api.md  behavior.html  behavior.md  cem.html  cem.md  components.html  components.md  concepts.html  concepts.md  notebook.html  serving.html  serving.md  transports.html  transports.md  tutorial.html  tutorial.md  wrappers.html  wrappers.md
js/: Cargo.toml  build.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
js/src/html/: index.html
js/src/rust/: lib.rs
js/src/ts/: actions.ts  cem.ts  handlers.ts  index.ts  runtime.ts  shell.ts  signals.ts  store-sync.ts  value.ts  wasm-ready.ts  webawesome.ts  widget.ts
js/src/ts/examples/: gateway.ts  webawesome.ts
js/src/ts/wrappers/: dagre-graph.ts  lightweight-chart.ts  perspective-workspace.ts
js/tests/: actions.spec.js  cem.spec.js  dagre-graph.html  dagre-graph.spec.js  hydrate.spec.js  layout.html  layout.spec.js  lightweight-chart.html  lightweight-chart.spec.js  runtime.html  runtime.spec.js  shell.spec.js  show.spec.js  signals.spec.js  store-sync.spec.js  widget-webawesome.html  widget-webawesome.spec.js  widget.html  widget.spec.js
js/tools/: bundle.mjs  css.mjs
rust/: Cargo.toml
rust/python/: lib.rs
rust/python/example/: mod.rs
rust/python/patch/: mod.rs
rust/src/: action.rs  cem.rs  diff.rs  example.rs  json.rs  lib.rs  node.rs  value.rs  wire.rs
spaday/: __init__.py  actions.py  bootstrap.py  cem.py  component.py  packages.py  render.py  serve.py  theme.py  validate.py  widget.py
spaday/backends/: __init__.py  aiohttp.py  flask.py  starlette.py  tornado.py
spaday/components/: __init__.py  dagre_graph.cem.json  dagre_graph.py  form.py  lightweight_charts.cem.json  lightweight_charts.py  perspective.cem.json  perspective.py  shell.py  webawesome.py
spaday/examples/: README.html  README.md  __main__.py  chart.py  cluster.html  cluster.py  dashboard.html  dashboard.py  devices.py  embed.py  form.html  form.py  fragment.py  gateway.html  gateway.py  graph.html  graph.py  index.html  live.html  reactive.html  reactive.py  (+3 more)
(+46 files in other folders)
