[package]
name = "spaday_py"
version = "0.3.0"
edition = "2021"
publish = false

[lib]
name = "spaday"
path = "rust/python/lib.rs"
crate-type = ["cdylib"]

[dependencies]
spaday = { path = "./rust", version = "*" }
pyo3 = { version = "0.29.0", features = ["abi3", "extension-module", "multiple-pymethods"] }

[profile.release]
panic = 'abort'
lto = true

[profile.test.junit]
path = "junit.xml"

[workspace]
members = [
    "js",
    "rust",
]
