[package]
name = "spaday_js"
version = "0.1.0"
edition = "2021"
publish = false
keywords = ["experimental"]
include = ["src/**/*", "Cargo.toml", "package.json"]

[lib]
name = "spaday"
path = "src/rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
spaday = { path = "../rust", version = "*" }
wasm-bindgen = "0.2.108"
