[package]
name = "spaday"
version = "0.3.0"
authors = ["1kbgz <dev@1kbgz.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/1kbgz/spaday"
description = ""

[lib]
name = "spaday"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# spaday's prop/state `Value` IS transports' core `Value`, and its tree/patch ride transports' `Frame` +
# codecs (see rust/src/value.rs, rust/src/wire.rs). Tracks the published transports release.
transports = "0.4"